--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,10 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testImplementation 'com.codeborne:selenide:5.25.0-selenium-4.0.0'
+    testImplementation 'com.codeborne:selenide:6.0.3'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
+    testImplementation 'mysql:mysql-connector-java:8.0.27'
 }
 
 test {
